--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -193,5 +193,17 @@
     border: none;
     outline: none;
 }
+
+.selectpost{
+     font-weight: bolder;
+    color: #ffffff;
+    font-weight: bolder;
+    background-color: dodgerblue;
+    width: fit-content;
+    padding: 5px 12px;
+    margin: 0 auto;
+    margin-top: 4%;
+    border-radius: 8px;
+}
    
 
