--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -227,7 +227,7 @@
     </div>
 </div>
 
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.7)" size = "medium" color = "#fff" type = "square-jelly-box" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 140px; height: 140px;margin-top: -143px" /></ngx-spinner>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.7)" size = "medium" color = "white" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 140px; height: 140px;margin-top: -135px;" /></ngx-spinner>
 
 
 <div class="modal fade" id="PostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
