--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -15,13 +15,13 @@
                 <div class="editandview">View archive</div>
                 <div data-bs-toggle="modal" data-bs-target="#settingsModal" ><img src="../../../assets/settings.png" style="width: 33px;height: 28px;margin-left: -7px;cursor: pointer;"/></div>
             </div>
-            <div style="display: flex;margin-left: 48px;margin-top: 16px;">
+            <div style="display: flex;margin-left: 48px;margin-top: 16px;margin-bottom: 20px;">
                 <div style="margin-right: 16px;"><span style="font-weight: bold;">{{post}}</span> Posts</div>
                 <div style="margin-right: 16px;"><span style="font-weight: bold;">{{follower}}</span> Followers</div>
                 <div style="margin-right: 16px;"><span style="font-weight: bold;">{{following}}</span> Following</div>
             </div>
-            <div style="margin-left: 48px;margin-top: 16px;" *ngFor="let b of biodata" >
-              {{b}}
+            <div style="margin-left: 48px;" *ngFor="let d of biodata" >
+              <div>{{d}}</div>
             </div>
         </div>
     </div>
@@ -47,12 +47,10 @@
 </div>
 
 <div style="margin-top: 23px;width: 74%;margin: 58px auto;">
-    <div class="row" style="height: 42vh;">
-         <div class="col-4 postimg"></div>
-         <div class="col-4 postimg"></div>
-         <div class="col-4 postimg"></div>
+    <div class="row" style="height: 42vh;" >
+         <div class="col-4 postimg" *ngFor="let post of Userposts"><img style="width: 100%;height: 43vh;" [src]="post.posturl"/></div>
     </div>
-    <div class="row" style="height: 42vh;">
+    <!-- <div class="row" style="height: 42vh;">
          <div class="col-4 postimg"></div>
          <div class="col-4 postimg"></div>
          <div class="col-4 postimg"></div>
@@ -61,7 +59,7 @@
         <div class="col-4 postimg"></div>
         <div class="col-4 postimg"></div>
         <div class="col-4 postimg"></div>
-    </div>
+    </div> -->
 </div>
   
   <!-- Modal -->
@@ -160,4 +158,40 @@
  </div>
 
 
+ <div class="modal fade" id="PostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="width: 475px; margin: auto;border-radius: 18px;height: 73vh ">
+     <div style="font-size: 17px;
+     font-weight: 600;
+     cursor: auto;
+     border-bottom: 1px solid #c6c6c6;
+     width: 100%;
+     text-align: center;
+     border-top-left-radius: 18px;
+     border-top-right-radius: 18px;
+     padding: 11px;" class="settinglinks">Create new post</div>
+      <div class="modal-body">
+       
+        <div style="height: 236px;">
+           
+          
+           <div style="
+           width: 26%;
+           margin: 0 auto;
+           margin-top: 109px;
+       ">
+           <img src="../../assets/postmodalimage.png" style=" width: 115px;" />
+        </div>
+           <div  class="selectpost">
+             
+            <label style="cursor: pointer;" *ngIf="showupload" for="uploadpic"> Select from computer </label>
+            <label *ngIf="showsave" style="cursor: pointer;color: rgb(137, 227, 2);" data-bs-dismiss="modal"  (click)="Uploadpostimage()" > Upload Photo </label>
+            <input (change)="storefile($event)" style="display: none;" type="file" id="uploadpic" />
+          </div>
+           <!-- <div  data-bs-dismiss="modal"  class="settinglinkslast" style="border-bottom-left-radius: 18px;border-bottom-right-radius: 18px;">Cancel</div> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
