--- a/src/app/Profile/profilepage/profilepage.component.css
+++ b/src/app/Profile/profilepage/profilepage.component.css
@@ -1,8 +1,5 @@
-.postimg{
-    background-color: grey;
-    border: 3px solid white; 
-    cursor: pointer;
-}
+
+
 
 .highlightimage{
     width: 88px;
@@ -186,4 +183,58 @@
    margin: 0 auto;
    margin-top: 4%;
    border-radius: 8px;
+}
+.postimg{
+    cursor: pointer;
+    height: 102%;
+    border-radius: 1px;
+    box-shadow: 0px 0px 8px #939393;
+    padding: 8px;
+    transition: 1s;
+}
+
+.postimg:hover{
+   transform: scale(1.1);
+}
+
+
+
+figure {
+  display: grid;
+  overflow: hidden;
+  cursor: pointer;
+  height: 100%;
+}
+figure > * {
+  grid-area: 1/1;
+  transition: .4s;
+}
+figure figcaption {
+  display: grid;
+  align-items: end;
+  font-family: sans-serif;
+  font-size: 2.3rem;
+  font-weight: bold;
+  color: #0000;
+  padding: .75rem;
+  background: var(--c,#0009);
+  clip-path: inset(0 var(--_i,100%) 0 0);
+  -webkit-mask:
+    linear-gradient(#000 0 0),
+    linear-gradient(#000 0 0);
+  -webkit-mask-composite: xor;
+  -webkit-mask-clip: text, padding-box;
+  margin: -1px;
+}
+figure:hover figcaption{
+  --_i: 0%;
+}
+figure:hover img {
+  transform: scale(1.2);
+}
+@supports not (-webkit-mask-clip: text) {
+  figure figcaption {
+   -webkit-mask: none;
+   color: #fff;
+  }
 }
