--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -48,7 +48,12 @@
 
 <div style="margin-top: 23px;width: 74%;margin: 58px auto;">
     <div class="row" style="height: 42vh;" >
-         <div class="col-4 postimg" *ngFor="let post of Userposts"><img style="width: 100%;height: 43vh;" [src]="post.posturl"/></div>
+         <div class="col-4 " style="margin-bottom: 23px;height: 100%;" *ngFor="let post of Userposts"><div class="postimg">
+          <figure>  
+            <img style="max-width: 100%;height: 100%; object-fit: contain;" [src]="post.posturl"/>
+            <figcaption>The Day</figcaption>
+           </figure>
+        </div></div>
     </div>
     <!-- <div class="row" style="height: 42vh;">
          <div class="col-4 postimg"></div>
