--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,4 +53,4 @@ margin: 17px 48px;
     </div>
 </div>
 
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.7)" size = "medium" color = "white" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 140px; height: 140px;margin-top: -135px;" /></ngx-spinner>
+<ngx-spinner bdColor = "white" size = "medium" color ="#dd0992" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 120px;height: 120px;margin-top: -138px " /></ngx-spinner>
