--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -229,7 +229,10 @@
 
 <!-- <ngx-spinner bdColor = "rgba(0, 0, 0, 0.7)" size = "medium" color = "white" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 140px; height: 140px;margin-top: -135px;" /></ngx-spinner> -->
 
-<ngx-spinner bdColor = "white" size = "medium" color ="#dd0992" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 120px;height: 120px;margin-top: -138px " /></ngx-spinner>
+<!-- <ngx-spinner bdColor = "white" size = "medium" color ="#dd0992" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 120px;height: 120px;margin-top: -138px " /></ngx-spinner>
+
+-->
+<ngx-spinner bdColor = "#ffffffc2" size = "medium" color ="#dd0992" type = "ball-scale-multipl" [fullScreen] = "true"><img src="../../assets/instaloader1.gif" style="width: 219px;height: 219px;margin-top: -138px " /></ngx-spinner>
 
 <div class="modal fade" id="PostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
    <div class="modal-dialog modal-dialog-centered">
