--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,4 +53,4 @@ margin: 17px 48px;
     </div>
 </div>
 
-<ngx-spinner bdColor = "white" size = "medium" color ="#dd0992" type = "ball-scale-multiple" [fullScreen] = "true"><img src="../../assets/loader.png" style="width: 120px;height: 120px;margin-top: -138px " /></ngx-spinner>
+<ngx-spinner bdColor = "#ffffffc2" size = "medium" color ="#dd0992" type = "ball-scale-multipl" [fullScreen] = "true"><img src="../../assets/instaloader1.gif" style="width: 219px;height: 219px;margin-top: -138px " /></ngx-spinner>
