--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -50,7 +50,7 @@
     <div class="row" style="height: 42vh;" >
          <div class="col-4 " style="margin-bottom: 23px;height: 100%;" *ngFor="let post of Userposts"><div data-bs-toggle="modal" data-bs-target="#openpostmodal" (click)="openpost(post)" class="postimg">
           <figure>  
-            <img  style="max-width: 100%;height: 100%; object-fit: contain;" [src]="post.posturl"/>
+            <img  style="max-width: 100%;height: 100%; object-fit: contain;display: block;margin: auto;" [src]="post.posturl"/>
             <figcaption><div>ddd</div></figcaption>
            </figure>
         </div></div>
@@ -157,31 +157,16 @@
  <div class="modal fade" id="PostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="width: 475px; margin: auto;border-radius: 18px;height: 73vh ">
-     <div style="font-size: 17px;
-     font-weight: 600;
-     cursor: auto;
-     border-bottom: 1px solid #c6c6c6;
-     width: 100%;
-     text-align: center;
-     border-top-left-radius: 18px;
-     border-top-right-radius: 18px;
-     padding: 11px;" class="settinglinks">Create new post</div>
+     <div class="settinglinks createnewpost">Create new post</div>
       <div class="modal-body">
-       
         <div style="height: 236px;">
-           
-          
-           <div style="
-           width: 26%;
-           margin: 0 auto;
-           margin-top: 109px;
-       ">
+           <div style=" width: 26%; margin: 0 auto;margin-top: 109px;">
            <img src="../../assets/postmodalimage.png" style=" width: 115px;" />
         </div>
            <div  class="selectpost">
              
             <label style="cursor: pointer;" *ngIf="showupload" for="uploadpic"> Select from computer </label>
-            <label *ngIf="showsave" style="cursor: pointer;color: rgb(137, 227, 2);" data-bs-dismiss="modal"  (click)="Uploadpostimage()" > Upload Photo </label>
+            <label *ngIf="showsave" style="cursor: pointer;" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#openpostmodalwhenupload"   (click)="Uploadpostimage()" > Upload Photo </label>
             <input (change)="storefile($event)" style="display: none;" type="file" id="uploadpic" />
           </div>
            <!-- <div  data-bs-dismiss="modal"  class="settinglinkslast" style="border-bottom-left-radius: 18px;border-bottom-right-radius: 18px;">Cancel</div> -->
@@ -196,7 +181,7 @@
     <div class="modal-content" style="height: 636px ; margin: auto;">
       <div class="modal-body">
         <div class="row">
-           <div class="col-7" style="height: 634px;background-color: #f0f0f0fc"><img style="max-width: 100%;height: 100%; object-fit: contain;"[src]="openimgurl" /></div>
+           <div class="col-7" style="height: 634px;background-color: #f0f0f0fc"><img style="max-width: 100%;height: 100%; object-fit: contain;margin: auto;display: block;"[src]="openimgurl" /></div>
            <div class="col">
             <div>
                 <div class="profilepicinpost">
@@ -214,6 +199,33 @@
   </div>
 </div>
 
+<div class="modal fade" id="openpostmodalwhenupload" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-xl">
+    <div class="modal-content" style="height: 500px ; margin: auto;width: 74%;">
+      <div class="modal-body">
+        <div class="row">
+           <div class="col-7" style="height: 498px;background-color: #f0f0f0fc"><img style="max-width: 100%;height: 100%; object-fit: contain;display: block;margin: auto;"[src]="instantuploadedimgurl" /></div>
+           <div class="col">
+            <div>
+                <div class="profilepicinpost">
+                    <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                    <span style="font-weight: bold;margin-left: 18px;">{{AccountName}}</span>
+                    <button class="share"  (click)="createpost()"  data-bs-dismiss="modal" >Share</button>
+                </div>
+
+                <div style="margin-top: 22px;">
+                  <input class="captioninput" [(ngModel)]="caption" style="border: none;" type="text" placeholder="Write a caption" />
+                 </div>
+            </div>
+            <div></div>
+            <div></div>
+           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 <div class="modal fade" id="postmoreoption" style="background-color: rgb(25 25 25 / 78%);" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -221,7 +233,7 @@
     <div class="modal-content" style="width: 418px; margin: auto;">
       <div class="modal-body" style="box-shadow: 0px 0px 24px #424242;">
         <div style="height: 461px;">
-           <div class="settinglinks" style="color: red;">Delete</div>
+           <div class="settinglinks" data-bs-dismiss="modal" (click)="deletepost(imagename)" style="color: red;">Delete</div>
            <div  class="settinglinks">Edit</div>
            <div  class="settinglinks">Hide like count to others</div>
            <div  class="settinglinks">Turn off commenting</div>
