--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
 <div >
     <div class="row" [ngStyle]="{'backgroundColor':isdark?'black':'white','color':isdark?'white':'black'}">
        
