--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
+<mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
+
 <div style="width: 50%;margin: 30px auto;" class="row">
+
     <div style="height: 85vh;" class="col">
        <img src="../../assets/loginimage.png" style="width: 108%;height: 85vh;position: relative;margin-left: -37px;" />
     </div>
