--- a/src/app/Profile/profilepage/profilepage.component.html
+++ b/src/app/Profile/profilepage/profilepage.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
 <div  *ngIf="profilehomepage">
 <div style="margin-top: 23px;width: 65%;margin: 0 auto;">
     <div class="row" style="height: 30vh;">
@@ -26,7 +27,7 @@
         </div>
     </div>
 </div>
-<div style="width: 74%;margin: 0 auto;">
+<div *ngIf="Userposts.length!=0" style="width: 74%;margin: 0 auto;">
     <div class="row" style="height: 28vh;border-bottom: 1px solid #d7d6d6;">
         <div class="col-2" style="width: 12%;">
            <!-- <img src="../../../assets/post1.jpg" style="width: 100px;height: 100px;border-radius: 50%;margin-top: 29px" /> -->
@@ -48,12 +49,21 @@
 
 <div style="margin-top: 23px;width: 74%;margin: 58px auto;">
     <div class="row" style="height: 42vh;" >
-         <div class="col-4 " style="margin-bottom: 23px;height: 100%;" *ngFor="let post of Userposts"><div data-bs-toggle="modal" data-bs-target="#openpostmodal" (click)="openpost(post)" class="postimg">
-          <figure>  
-            <img  style="max-width: 100%;height: 100%; object-fit: contain;display: block;margin: auto;" [src]="post.posturl"/>
-            <figcaption><div>ddd</div></figcaption>
-           </figure>
-        </div></div>
+      <div *ngIf="Userposts.length==0">
+         <div style="width: 231px;margin: 0 auto;">
+             <img style="width: 100px;margin-left: 49px;" src="../../../assets/nopost.png"/>
+             <p style="font-weight: bold;font-size:37px;">No Posts Yet</p>
+         </div>
+      </div> 
+      <!-- <div *ngIf="Userposts.length!=0">  -->
+          <div class="col-4 " *ngIf="Userposts.length!=0" style="margin-bottom: 23px;height: 100%;" ><div *ngFor="let post of Userposts" data-bs-toggle="modal" data-bs-target="#openpostmodal" (click)="openpost(post)" class="postimg">
+            <figure>  
+              <img  style="max-width: 100%;height: 100%; object-fit: contain;display: block;margin: auto;" [src]="post.posturl"/>
+              <figcaption><div>ddd</div></figcaption>
+            </figure>
+            </div>
+          </div>
+      <!-- </div> -->
     </div>
 </div>
   
@@ -184,10 +194,26 @@
            <div class="col-7" style="height: 634px;background-color: #f0f0f0fc"><img style="max-width: 100%;height: 100%; object-fit: contain;margin: auto;display: block;"[src]="openimgurl" /></div>
            <div class="col">
             <div>
-                <div class="profilepicinpost">
+                <div style="border-bottom: 1px solid #e0e0e0;" class="profilepicinpost">
                     <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
-                    <span style="font-weight: bold;margin-left: 18px;">{{AccountName}}</span>
-                    <button data-bs-toggle="modal" data-bs-target="#postmoreoption" >***</button>
+                    <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
+                    <button style="float: right;border: none;background: none;font-size: 19px;" data-bs-toggle="modal" data-bs-target="#postmoreoption" ><i  class="fa-solid fa-ellipsis"></i></button>
+                </div>
+                <div style=" height: 59vh; border-bottom: 1px solid #e1e1e1;margin-bottom: 12px" class="profilepicinpost">
+                  <img [src]="profileimgurl" style="width: 34px;height: 34px;border-radius: 50%;cursor: pointer;box-shadow: 0px 0px 1px #b2b1b1;" />
+                  <span style="font-weight: 600;margin-left: 18px;font-size: 13px;">{{AccountName}}</span>
+                  <span style="margin-left: 10px;max-width:200px;word-wrap:break-word;">{{postcaption?.substring(0,20)}}</span>
+                  <p style="margin-left: 10px;max-width:349px;word-wrap:break-word;">{{postcaption.length>20?postcaption.substring(20):""}}</p>
+                </div>
+                <div>
+                  <div class="innerlikesandcomment">
+                    <span ><i  class="fa-regular fa-heart menuiconpost"></i></span>
+                    <!-- <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span> -->
+                    <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
+                    <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
+                    <span ><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
+                    <!-- <span ><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>    -->
+                   </div>
                 </div>
             </div>
             <div></div>
