--- a/src/app/Profile/profilepage/profilepage.component.css
+++ b/src/app/Profile/profilepage/profilepage.component.css
@@ -186,7 +186,8 @@
 }
 .postimg{
     cursor: pointer;
-    height: 102%;
+    /* height: 102%; */
+    height:298px;
     border-radius: 1px;
     box-shadow: 0px 0px 8px #939393;
     padding: 8px;
@@ -280,4 +281,14 @@ figure:hover figcaption{
     font-size: 24px;
     margin-right: 17px;
     cursor: pointer;
+}
+
+.commentinput{
+    border: none;
+    margin-top: 19px;
+    margin-left: 13px
+}
+
+.commentinput:focus{
+    outline: none;
 }
